fix spacing

--- a/Escale.Web/wwwroot/css/site.css
+++ b/Escale.Web/wwwroot/css/site.css
@@ -379,8 +379,8 @@ body {
    MAIN CONTENT AREA
    =================================== */
 .main-content {
-  margin-top: 56px;
-  padding: 30px;
+/*  margin-top: 56px;*/
+  padding: 20px;
   min-height: calc(100vh - 56px);
 }
 
